PS-2018.2.5 <inkogn1to@INKOGN1TO-PC Update CSS.xml

--- a/templates/CSS.xml
+++ b/templates/CSS.xml
@@ -11,4 +11,10 @@
       <option name="CSS" value="true" />
     </context>
   </template>
+  <template name="mq" value="@include max-w($TEXT$) {&#10;&#9;$END$&#10;}" description="Add mixin for media query (SCSS)" toReformat="false" toShortenFQNames="true">
+    <variable name="TEXT" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="CSS" value="true" />
+    </context>
+  </template>
 </templateSet>
